--- a/wind-test/pom.xml
+++ b/wind-test/pom.xml
@@ -8,8 +8,9 @@
         <version>1.0.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-
     <artifactId>wind-test</artifactId>
+    <name>wind-test</name>
+    <version>3.0.0-SNAPSHOT</version>
 
     <properties>
         <druid.version>1.1.22</druid.version>
