--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,7 @@
         </snapshotRepository>
     </distributionManagement>
     <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <jackson.version>2.9.8</jackson.version>
         <lombok.version>1.18.10</lombok.version>
         <fastjson.version>1.2.67</fastjson.version>
@@ -41,7 +42,7 @@
         <javax.persistence-api.version>2.2</javax.persistence-api.version>
         <findgugs.annotations.version>2.0.1</findgugs.annotations.version>
         <swagger-annotations.version>1.5.22</swagger-annotations.version>
-        <wind-annotation.version>1.0.0-SNAPSHOT</wind-annotation.version>
+        <wind-annotation.version>3.0.0-SNAPSHOT</wind-annotation.version>
     </properties>
     <dependencies>
         <dependency>
