--- a/wind-annotation/pom.xml
+++ b/wind-annotation/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>ratel-wind</artifactId>
         <groupId>io.github.ramerf</groupId>
-        <version>1.0.0-SNAPSHOT</version>
+        <version>3.0.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -13,5 +13,7 @@
     <name>wind-annotation</name>
     <version>3.0.0-SNAPSHOT</version>
     <packaging>jar</packaging>
-
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    </properties>
 </project>
