--- a/wind-core/pom.xml
+++ b/wind-core/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>ratel-wind</artifactId>
         <groupId>io.github.ramerf</groupId>
-        <version>1.0.0-SNAPSHOT</version>
+        <version>3.0.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -13,7 +13,7 @@
     <name>wind-core</name>
     <version>3.0.0-SNAPSHOT</version>
     <properties>
-        <wind-annotation.version>3.0.0-SNAPSHOT</wind-annotation.version>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
     <dependencies>
@@ -25,7 +25,6 @@
         <dependency>
             <groupId>io.github.ramerf</groupId>
             <artifactId>wind-annotation</artifactId>
-            <version>${wind-annotation.version}</version>
         </dependency>
         <dependency>
             <groupId>org.springframework</groupId>
