--- a/wind-test/pom.xml
+++ b/wind-test/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>ratel-wind</artifactId>
         <groupId>io.github.ramerf</groupId>
-        <version>1.0.0-SNAPSHOT</version>
+        <version>3.0.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>wind-test</artifactId>
@@ -13,8 +13,9 @@
     <version>3.0.0-SNAPSHOT</version>
 
     <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <druid.version>1.1.22</druid.version>
-        <wind-core.version>2.0.2-SNAPSHOT</wind-core.version>
+        <wind-core.version>3.0.0-SNAPSHOT</wind-core.version>
     </properties>
     <dependencies>
         <dependency>
