--- a/wind-test/src/main/resources/application.yml
+++ b/wind-test/src/main/resources/application.yml
@@ -2,7 +2,7 @@ server:
   port: 8080
 spring:
   application:
-    name: mybatis-turbo-test
+    name: wind-test
   datasource:
     name: test
     type: com.alibaba.druid.pool.DruidDataSource
