--- a/wind-demo/pom.xml
+++ b/wind-demo/pom.xml
@@ -5,17 +5,17 @@
     <parent>
         <artifactId>wind</artifactId>
         <groupId>io.github.ramerf</groupId>
-        <version>3.1.0-SNAPSHOT</version>
+        <version>3.1.0-RELEASE</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>wind-demo</artifactId>
     <name>wind-demo</name>
-    <version>3.1.0-SNAPSHOT</version>
+    <version>3.1.0-RELEASE</version>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <druid.version>1.1.22</druid.version>
-        <wind-core.version>3.1.0-SNAPSHOT</wind-core.version>
+        <wind-core.version>3.1.0-RELEASE</wind-core.version>
     </properties>
     <dependencies>
         <dependency>
