修复: 配置文件增加默认值.

--- a/wind-demo/src/main/resources/application.yml
+++ b/wind-demo/src/main/resources/application.yml
@@ -80,5 +80,5 @@ wind:
   logic-deleted: true
   entity-package: io.github.ramerf.wind..demo.entity.pojo
   snowflake-prop:
-    work-id: 3
+    worker-id: 3
     data-center-id: 2
