--- a/wind-demo/src/main/resources/application.yml
+++ b/wind-demo/src/main/resources/application.yml
@@ -6,7 +6,7 @@ spring:
   datasource:
     name: wind-demo
     type: com.alibaba.druid.pool.DruidDataSource
-    url: jdbc:postgresql:///wind?serverTimezone=GMT%2B8&useUnicode=true&characterEncoding=UTF-8
+    url: jdbc:postgresql:///wind?serverTimezone=GMT%2B8&useUnicode=true&characterEncoding=UTF-8?reWriteBatchedInserts=true
     username: postgres
     password: 123456
     driver-class-name: org.postgresql.Driver
