--- a/wind-demo/src/main/resources/application.yml
+++ b/wind-demo/src/main/resources/application.yml
@@ -80,6 +80,7 @@ wind:
   # 逻辑已删除值(默认为 true)
   logic-deleted: true
   entity-package: io.github.ramerf.wind..demo.entity.pojo
+  batch-size: 1000
   snowflake-prop:
     worker-id: 3
     data-center-id: 2
