修复: feign调用时,枚举反序列化异常.

--- a/pom.xml
+++ b/pom.xml
@@ -197,7 +197,7 @@
                         <executions>
                             <execution>
                                 <id>signArtifact</id>
-                                <phase>verify</phase>
+                                <phase>deploy</phase>
                                 <goals>
                                     <goal>sign</goal>
                                 </goals>
