--- a/wind-demo/src/main/resources/application.yml
+++ b/wind-demo/src/main/resources/application.yml
@@ -54,8 +54,9 @@ spring:
   redis:
     host: localhost
     port: 6379
+    password: 123456
+    database: 5
     timeout: 6000
-    database: 3
     lettuce:
       pool:
         max-active: 10 # 连接池最大连接数（使用负值表示没有限制）,如果赋值为-1，则表示不限制；如果pool已经分配了maxActive个jedis实例，则此时pool的状态为exhausted(耗尽)
