添加: 频繁请求拦截. 添加: redis缓存自定义前缀.

--- a/wind-demo/src/main/resources/application.yml
+++ b/wind-demo/src/main/resources/application.yml
@@ -86,6 +86,12 @@ wind:
   batch-size: 500
   # 是否自定义枚举反序列化.设置为true时,可能需要编写枚举反序列化代码
   custom-enum-deserializer: false
+  frequency-request-intercept:
+    enable: true
+    time: 2000
+  redis-cache:
+    enable: true
+    key-prefix: io.github.ramerf.wind
   # 用于分布式id雪花算法
   snowflake-prop:
     worker-id: 3
