--- a/wind-demo/src/main/resources/application.yml
+++ b/wind-demo/src/main/resources/application.yml
@@ -82,12 +82,14 @@ wind:
   logic-deleted: true
   # entity所在包路径,多个以,分割
   entity-package: io.github.ramerf.wind.demo.entity.pojo
-  # 批量操作时,每次处理的大小
+  # 批量操作时每次处理的大小,默认为150
   batch-size: 500
-  # 是否自定义枚举反序列化.设置为true时,可能需要编写枚举反序列化代码
+  # 是否自定义枚举反序列化,默认为false.设置为true时,可能需要编写枚举反序列化代码
   custom-enum-deserializer: false
   redis-cache:
+    # 默认开启redis缓存
     enable: true
+    # redis key前缀
     key-prefix: io.github.ramerf.wind
   # 用于分布式id雪花算法
   snowflake-prop:
