--- a/wind-demo-springdatajpa/src/main/resources/application.yml
+++ b/wind-demo-springdatajpa/src/main/resources/application.yml
@@ -87,12 +87,13 @@ logging:
     log4j.logger.org.springframework.jdbc.core.StatementCreatorUtils: TRACE
     jdbc.sqltiming: info
 wind:
-  # 逻辑删除字段名
-  logic-delete-field: isDelete
-  # 逻辑未删除值(默认为 false)
-  logic-not-delete: false
-  # 逻辑已删除值(默认为 true)
-  logic-deleted: true
+  logic-delete-prop:
+    # 逻辑删除字段名
+    column: is_delete
+    # 逻辑未删除值(默认为 false)
+    not-delete: false
+    # 逻辑已删除值(默认为 true)
+    deleted: true
   # entity所在包路径,多个以,分割
   entity-package: io.github.ramerf.wind.demo.entity.pojo
   # 批量操作时每次处理的大小,默认为150
