新增: 自动建表.

--- a/pom.xml
+++ b/pom.xml
@@ -49,7 +49,7 @@
         <javax.persistence-api.version>2.2</javax.persistence-api.version>
         <findgugs.annotations.version>2.0.1</findgugs.annotations.version>
         <swagger-annotations.version>1.5.22</swagger-annotations.version>
-        <wind-annotation.version>3.8.4-RELEASE</wind-annotation.version>
+        <wind.version>3.8.4-RELEASE</wind.version>
     </properties>
     <dependencies>
         <dependency>
@@ -134,7 +134,7 @@
             <dependency>
                 <groupId>io.github.ramerf</groupId>
                 <artifactId>wind-annotation</artifactId>
-                <version>${wind-annotation.version}</version>
+                <version>${wind.version}</version>
             </dependency>
             <dependency>
                 <groupId>io.swagger</groupId>
