--- a/wind-core/pom.xml
+++ b/wind-core/pom.xml
@@ -69,7 +69,7 @@
             <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
             <version>${postgresql.version}</version>
-            <scope>test</scope>
+            <scope>compile</scope>
         </dependency>
         <!-- druid 官方 starter -->
         <dependency>
