新增: 自动创建表,初步完成.

--- a/wind-demo/src/main/resources/application.yml
+++ b/wind-demo/src/main/resources/application.yml
@@ -85,13 +85,15 @@ wind:
     not-delete: false
     # 逻辑已删除值(默认为 true),添加@TableInfo注解会使该配置失效
     deleted: true
+  # 自动建表
+  ddl-auto: update
+  disable-fields: is_delete,create_time,update_time
   # entity所在包路径,多个以,分割
   entity-package: io.github.ramerf.wind.demo.entity.pojo
   # 批量操作时每次处理的大小,默认为150
   batch-size: 500
   # 是否自定义枚举反序列化,默认为false.设置为true时,可能需要编写枚举反序列化代码
   custom-enum-deserializer: false
-  ddl-auto: update
   redis-cache:
     # 默认开启redis缓存
     enable: true
@@ -101,3 +103,4 @@ wind:
   snowflake-prop:
     worker-id: 3
     data-center-id: 2
+  # 禁用公共字段
