--- a/wind-demo/src/main/resources/application.yml
+++ b/wind-demo/src/main/resources/application.yml
@@ -80,14 +80,14 @@ wind:
     # 是否启用逻辑删除,可以在类上使用@TableInfo的enableLogicDelete属性覆盖,添加@TableInfo注解会使该配置失效
     enable: false
     # 逻辑删除字段名,添加@TableInfo注解会使该配置失效
-    column: is_delete
+    column: deleted
     # 逻辑未删除值(默认为 false),添加@TableInfo注解会使该配置失效
     not-delete: false
     # 逻辑已删除值(默认为 true),添加@TableInfo注解会使该配置失效
     deleted: true
   # 自动建表
   ddl-auto: update
-  disable-fields: is_delete,create_time,update_time
+  disable-fields: deleted,create_time,update_time
   # entity所在包路径,多个以,分割
   entity-package: io.github.ramerf.wind.demo.entity.pojo
   # 批量操作时每次处理的大小,默认为150
