--- a/wind-core/pom.xml
+++ b/wind-core/pom.xml
@@ -71,6 +71,11 @@
             <version>${postgresql.version}</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <scope>test</scope>
+        </dependency>
         <!-- druid 官方 starter -->
         <dependency>
             <groupId>com.alibaba</groupId>
