--- a/wind-core/src/test/resources/application.yml
+++ b/wind-core/src/test/resources/application.yml
@@ -3,10 +3,8 @@ server:
 spring:
   application:
     name: wind-test
-  profiles:
-    active: test
   datasource:
-    name: wind-demo
+    name: wind-test
     type: com.alibaba.druid.pool.DruidDataSource
     url: jdbc:postgresql:///wind?serverTimezone=GMT%2B8&useUnicode=true&characterEncoding=UTF-8&reWriteBatchedInserts=true
     username: postgres
