新增：缓存支持自定义扩展，目前支持内存和Redis,默认使用内存缓存 新增：校验器工具类,用于支持手动校验和获取校验错误信息 新增：支持controller接收枚举参数并自动校验有效性 新增：全局异常处理 修复：缓存没有正确清除 优化：清除`redis`缓存时改为使用scan指令

--- a/wind-core/src/test/resources/application.yml
+++ b/wind-core/src/test/resources/application.yml
@@ -91,10 +91,10 @@ wind:
   batch-size: 30
   # 是否自定义枚举反序列化,默认为false.设置为true时,可能需要编写枚举反序列化代码
   custom-enum-deserializer: false
-  redis-cache:
-    # 默认开启redis缓存
-    enable: false
-    # redis key前缀
+  cache:
+    # 缓存类型.可选值: redis,memory 默认使用内存缓存
+    type: memory
+    # key前缀
     key-prefix: io.github.ramerf.wind
   # 用于分布式id雪花算法
   snowflake-prop:
