--- a/wind-demo/src/main/resources/application.yml
+++ b/wind-demo/src/main/resources/application.yml
@@ -87,6 +87,7 @@ wind:
     deleted: true
   # 自动建表
   ddl-auto: update
+  #禁用公共字段
   disable-fields: deleted,create_time,update_time
   # entity所在包路径,多个以,分割
   entity-package: io.github.ramerf.wind.demo.entity.pojo
@@ -94,13 +95,12 @@ wind:
   batch-size: 500
   # 是否自定义枚举反序列化,默认为false.设置为true时,可能需要编写枚举反序列化代码
   custom-enum-deserializer: false
-  redis-cache:
-    # 默认开启redis缓存
-    enable: true
+  cache:
+    # 缓存类型.可选值: redis,memory 默认使用内存缓存
+    type: redis
     # redis key前缀
     key-prefix: io.github.ramerf.wind
   # 用于分布式id雪花算法
   snowflake-prop:
     worker-id: 3
     data-center-id: 2
-  # 禁用公共字段
