--- a/wind-core/pom.xml
+++ b/wind-core/pom.xml
@@ -14,6 +14,7 @@
     <version>4.0.1-RELEASE</version>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <postgresql.version>42.2.18</postgresql.version>
         <druid.version>1.1.22</druid.version>
     </properties>
     <dependencies>
@@ -62,6 +63,7 @@
         <dependency>
             <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
+            <version>${postgresql.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
