--- a/wind-demo/pom.xml
+++ b/wind-demo/pom.xml
@@ -18,6 +18,7 @@
         <druid.version>1.1.22</druid.version>
         <wind.version>4.0.1-RELEASE</wind.version>
         <lombok.version>1.18.10</lombok.version>
+        <postgresql.version>42.2.18</postgresql.version>
     </properties>
     <dependencies>
         <dependency>
