新增：关联查询.

--- a/.gitignore
+++ b/.gitignore
@@ -27,4 +27,4 @@ hs_err_pid*
 target
 /**/src/main/resources/config
 /**/src/test/resources/config
-/**/TestController.java
+/**/controller/Test*.java
