--- a/wind-core/src/test/resources/application-pgsql.yml
+++ b/wind-core/src/test/resources/application-pgsql.yml
@@ -12,4 +12,4 @@ wind:
   # 禁用公共字段
   disable-fields: deleted,create_time,update_time
   # entity所在包路径,多个以,分割
-  entity-package: io.github.ramerf.wind.core.pgsql.entity.pojo
+  entity-package: io.github.ramerf.wind.core.pgsql
