更新: 默认保存/更新所有属性(包含null).

--- a/wind-demo/src/main/resources/application.yml
+++ b/wind-demo/src/main/resources/application.yml
@@ -104,4 +104,5 @@ wind:
   snowflake-prop:
     worker-id: 3
     data-center-id: 2
-  write-null-prop: true
+  # 新增/更新时写入值为null的属性,默认写入
+  write-null-prop: false
