更新：4.0.3版本发布.

--- a/wind-demo/src/main/resources/application.yml
+++ b/wind-demo/src/main/resources/application.yml
@@ -77,13 +77,13 @@ logging:
     jdbc.sqltiming: info
 wind:
   logic-delete-prop:
-    # 是否启用逻辑删除,可以在类上使用@TableInfo的enableLogicDelete属性覆盖,添加@TableInfo注解会使该配置失效
-    enable: false
-    # 逻辑删除字段名,添加@TableInfo注解会使该配置失效
+    # 是否启用逻辑删除,可以在类上使用@TableInfo的enableLogicDelete属性覆盖
+    enable: true
+    # 逻辑删除字段名
     field-name: deleted
-    # 逻辑未删除值(默认为 false),添加@TableInfo注解会使该配置失效
+    # 逻辑未删除值(默认为 false)
     not-delete: false
-    # 逻辑已删除值(默认为 true),添加@TableInfo注解会使该配置失效
+    # 逻辑已删除值(默认为 true)
     deleted: true
   # 自动建表
   ddl-auto: update
