--- a/wind-demo/pom.xml
+++ b/wind-demo/pom.xml
@@ -11,12 +11,12 @@
     <modelVersion>4.0.0</modelVersion>
     <artifactId>wind-demo</artifactId>
     <name>wind-demo</name>
-    <version>4.0.2-RELEASE</version>
+    <version>4.0.3</version>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <druid.version>1.1.22</druid.version>
-        <wind.version>4.0.2-RELEASE</wind.version>
+        <wind.version>4.0.3</wind.version>
         <lombok.version>1.18.10</lombok.version>
         <postgresql.version>42.2.18</postgresql.version>
     </properties>
