--- a/wind-demo/pom.xml
+++ b/wind-demo/pom.xml
@@ -17,8 +17,8 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <druid.version>1.1.22</druid.version>
         <wind.version>4.0.4</wind.version>
-        <lombok.version>1.18.10</lombok.version>
-        <postgresql.version>42.2.18</postgresql.version>
+        <lombok.version>1.18.20</lombok.version>
+        <postgresql.version>42.2.23.jre7</postgresql.version>
     </properties>
     <dependencies>
         <dependency>
