--- a/wind-core/pom.xml
+++ b/wind-core/pom.xml
@@ -3,7 +3,7 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>wind-parent</artifactId>
+        <artifactId>wind</artifactId>
         <groupId>io.github.ramerf</groupId>
         <version>4.0.7</version>
     </parent>
