--- a/wind-web/pom.xml
+++ b/wind-web/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <groupId>io.github.ramerf</groupId>
-        <artifactId>wind-parent</artifactId>
+        <artifactId>wind</artifactId>
         <version>4.0.7</version>
         <relativePath/>
     </parent>
