--- a/.github/workflows/SyncToGithub.yml
+++ b/.github/workflows/SyncToGithub.yml
@@ -2,6 +2,7 @@ name: Sync Gitee Repos To Github
 on:
   schedule:
     - cron: '0/5 * * * *'
+    branches: [ master ]
 jobs:
   build:
     runs-on: ubuntu-latest
