--- a/.github/workflows/SyncToGithub.yml
+++ b/.github/workflows/SyncToGithub.yml
@@ -1,8 +1,7 @@
 name: Sync Gitee Repos To Github
 on:
   schedule:
-    - cron: '0/5 * * * *'
-    branches: [ master ]
+    - cron: '*/5 * * * *'
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -10,6 +9,7 @@ jobs:
       - name: Sync Gitee Repos To Github
         uses: Yikun/hub-mirror-action@v1.0
         with:
+#          ref: master
           src: gitee/ramer
           dst: github/ramerf
           dst_key: ${{secrets.GITEE_PUB_KEY}} #SSH密钥对中的私钥，即 id_rsa
